# test_task

./: CMakeLists.txt  README.md  Task[1].md  docker-compose.yml
include/: ResultWriter.h
src/: ResultWriter.cpp  Test_main.cpp  main.cpp
tests/: Test_functions.cpp  Test_functions.h
